I hate github pages

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="KACASSETS/pictures/WebsiteLogo.png" alt="Website Logo">
       </a>
       <ul class="navbar-links">
-        <li class="nav-item"><a href="/products.html">Products</a></li>
+        <li class="nav-item"><a href="Nicks-KAC-redesign/products.html">Products</a></li>
         <li class="nav-item"><a href="/ourmission.html">Our Mission</a></li>
         <li class="nav-item"><a href="/contact.html">Contact</a></li>
       </ul>
