--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap" rel="stylesheet">
+  <base href="/[repo]/">
 </head>
 
 <body onload="document.body.style.opacity='1'">
@@ -16,8 +17,8 @@
       </a>
       <ul class="navbar-links">
         <li class="nav-item"><a href="/products.html">Products</a></li>
-        <li class="nav-item"><a href="{{ site.baseurl }}{{/ourmission.html}}">Our Mission</a></li>
-        <li class="nav-item"><a href="{{ site.baseurl }}{{contact.html}}">Contact</a></li>
+        <li class="nav-item"><a href="ourmission.html">Our Mission</a></li>
+        <li class="nav-item"><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
