--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap" rel="stylesheet">
-  <base href="/[repo]/">
+  <base href="/Nicks-KAC=redesign/">
 </head>
 
 <body onload="document.body.style.opacity='1'">
@@ -16,7 +16,7 @@
         <img src="KACASSETS/pictures/WebsiteLogo.png" alt="Website Logo">
       </a>
       <ul class="navbar-links">
-        <li class="nav-item"><a href="/products.html">Products</a></li>
+        <li class="nav-item"><a href="products.html">Products</a></li>
         <li class="nav-item"><a href="ourmission.html">Our Mission</a></li>
         <li class="nav-item"><a href="contact.html">Contact</a></li>
       </ul>
