--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap" rel="stylesheet">
-  <base href="/Nicks-KAC=redesign/">
+  <base href="/Nicks-KAC-redesign/">
 </head>
 
 <body onload="document.body.style.opacity='1'">
