--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body onload="document.body.style.opacity='1'">
   <header>
     <nav class="navbar">
-      <a href="file:///home/nick/Desktop/KACRedesign/index.html" class="logo">
+      <a href="index.html" class="logo">
         <img src="KACASSETS/pictures/WebsiteLogo.png" alt="Website Logo">
       </a>
       <ul class="navbar-links">
@@ -25,7 +25,7 @@
   <img class="homepage-operator" src="KACASSETS/pictures/BG/FixedMaybeBGSoldier.png" alt="Operator">
   <div class="cta">
     <h1 id="HeroH1">When Only The <br /> Best Will <br />Do.</h1>
-    <button onclick="location.href='file:///home/nick/Desktop/KACRedesign/products.html'" type="button"
+    <button onclick="location.href='products.html'" type="button"
       id="HeroButton">View Our Solutions</button>
   </div>
 </body>
