--- a/firearms.html
+++ b/firearms.html
@@ -6,30 +6,28 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap" rel="stylesheet">
+    <base href="/Nicks-KAC-redesign/">
 </head>
 
 <body id="otherpage" onload="document.body.style.opacity='1'">
     <header>
         <nav class="navbar">
-            <a href="file:///home/nick/Desktop/KACRedesign/index.html" class="logo">
+            <a href="index.html" class="logo">
                 <img src="KACASSETS/pictures/WebsiteLogo.png" alt="Website Logo">
             </a>
             <ul class="navbar-links">
-                <li class="nav-item"><a href="file:///home/nick/Desktop/KACRedesign/products.html">Products</a></li>
-                <li class="nav-item"><a href="file:///home/nick/Desktop/KACRedesign/ourmission.html">Our Mission</a>
+                <li class="nav-item"><a href="products.html">Products</a></li>
+                <li class="nav-item"><a href="ourmission.html">Our Mission</a>
                 </li>
-                <li class="nav-item"><a href="file:///home/nick/Desktop/KACRedesign/contact.html">Contact</a></li>
+                <li class="nav-item"><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <div id="firearm-cards">
-        <div onclick="location.href='file:///home/nick/Desktop/KACRedesign/military.html';" id="f-card-top"
-            class="f-card">Military</div>
-        <div onclick="location.href='file:///home/nick/Desktop/KACRedesign/commercial.html';" id="f-card-mid"
-            class="f-card">Commercial</div>
-        <div onclick="location.href='file:///home/nick/Desktop/KACRedesign/accessories.html';" id="f-card-bottom"
-            class="f-card">Parts and
+        <div onclick="location.href='military.html';" id="f-card-top" class="f-card">Military</div>
+        <div onclick="location.href='commercial.html';" id="f-card-mid" class="f-card">Commercial</div>
+        <div onclick="location.href='accessories.html';" id="f-card-bottom" class="f-card">Parts and
             Accessories</div>
     </div>
 
