--- a/knightvision.html
+++ b/knightvision.html
@@ -6,20 +6,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap" rel="stylesheet">
+    <base href="/Nicks-KAC-redesign/">
 </head>
 
 <body id="otherpage" onload="document.body.style.opacity='1'">
     <video autoplay muted loop src="KACASSETS/pictures/BG/KACKnightVidPlaceholder.mov" type="video/mov"></video>
     <header>
         <nav class="navbar">
-            <a href="file:///home/nick/Desktop/KACRedesign/index.html" class="logo">
+            <a href="index.html" class="logo">
                 <img src="KACASSETS/pictures/WebsiteLogo.png" alt="Website Logo">
             </a>
             <ul class="navbar-links">
-                <li class="nav-item"><a href="file:///home/nick/Desktop/KACRedesign/products.html">Products</a></li>
-                <li class="nav-item"><a href="file:///home/nick/Desktop/KACRedesign/ourmission.html">Our Mission</a>
+                <li class="nav-item"><a href="products.html">Products</a></li>
+                <li class="nav-item"><a href="ourmission.html">Our Mission</a>
                 </li>
-                <li class="nav-item"><a href="file:///home/nick/Desktop/KACRedesign/contact.html">Contact</a></li>
+                <li class="nav-item"><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -41,8 +42,7 @@
     </div>
 
     <div class="knightvision-products">
-        <div onclick="location.href='file:///home/nick/Desktop/KACRedesign/fire-lr.html'" id="FIRE-LR"
-            class="knightvision-p-link">
+        <div onclick="location.href='fire-lr.html'" id="FIRE-LR" class="knightvision-p-link">
 
             <img src="KACASSETS/pictures/fire-lr_Transparent.png" alt="fire-lr">
             <h3>FIRE-LR</h3>
