--- a/ourmission.html
+++ b/ourmission.html
@@ -9,18 +9,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap" rel="stylesheet">
+    <base href="/Nicks-KAC-redesign/">
 </head>
 
 <body id="otherpage" onload="document.body.style.opacity='1'">
     <nav class="navbar">
-        <a href="file:///home/nick/Desktop/KACRedesign/index.html" class="logo">
+        <a href="index.html" class="logo">
             <img src="KACASSETS/pictures/WebsiteLogo.png" alt="Website Logo">
         </a>
         <ul class="navbar-links">
-            <li class="nav-item"><a href="file:///home/nick/Desktop/KACRedesign/products.html">Products</a></li>
-            <li class="nav-item"><a style="font-weight: bold"
-                    href="file:///home/nick/Desktop/KACRedesign/ourmission.html">Our Mission</a></li>
-            <li class="nav-item"><a href="file:///home/nick/Desktop/KACRedesign/contact.html">Contact</a></li>
+            <li class="nav-item"><a href="products.html">Products</a></li>
+            <li class="nav-item"><a style="font-weight: bold" href="ourmission.html">Our Mission</a></li>
+            <li class="nav-item"><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 
