--- a/sr15.html
+++ b/sr15.html
@@ -6,19 +6,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap" rel="stylesheet">
+    <base href="/Nicks-KAC-redesign/">
 </head>
 
 <body id="otherpage" onload="document.body.style.opacity='1'">
     <header>
         <nav class="navbar">
-            <a href="file:///home/nick/Desktop/KACRedesign/index.html" class="logo">
+            <a href="index.html" class="logo">
                 <img src="KACASSETS/pictures/WebsiteLogo.png" alt="Website Logo">
             </a>
             <ul class="navbar-links">
-                <li class="nav-item"><a href="file:///home/nick/Desktop/KACRedesign/products.html">Products</a></li>
-                <li class="nav-item"><a href="file:///home/nick/Desktop/KACRedesign/ourmission.html">Our Mission</a>
+                <li class="nav-item"><a href="products.html">Products</a></li>
+                <li class="nav-item"><a href="ourmission.html">Our Mission</a>
                 </li>
-                <li class="nav-item"><a href="file:///home/nick/Desktop/KACRedesign/contact.html">Contact</a></li>
+                <li class="nav-item"><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -75,8 +76,8 @@
         </div>
         <div class="commercialitemsright">
             <h3>SR-15 CQB</h3>
-            <button onclick="location.href='file:///home/nick/Desktop/KACRedesign/products.html'" type="button"
-                class="CommercialProductButton">Find a Dealer</button>
+            <button onclick="location.href='products.html'" type="button" class="CommercialProductButton">Find a
+                Dealer</button>
             <p style="color: red;">NFA ITEM</p>
         </div>
     </div>
@@ -110,8 +111,8 @@
         </div>
         <div class="commercialitemsright">
             <h3>SR-15 Carbine</h3>
-            <button onclick="location.href='file:///home/nick/Desktop/KACRedesign/products.html'" type="button"
-                class="CommercialProductButton">Find a Dealer</button>
+            <button onclick="location.href='products.html'" type="button" class="CommercialProductButton">Find a
+                Dealer</button>
             <p style="color: red;">NFA ITEM</p>
         </div>
     </div>
@@ -146,8 +147,8 @@
         </div>
         <div class="commercialitemsright">
             <h3>SR-15 Mod 2</h3>
-            <button onclick="location.href='file:///home/nick/Desktop/KACRedesign/products.html'" type="button"
-                class="CommercialProductButton">Find a Dealer</button>
+            <button onclick="location.href='products.html'" type="button" class="CommercialProductButton">Find a
+                Dealer</button>
         </div>
 
 
@@ -183,8 +184,8 @@
         </div>
         <div class="commercialitemsright">
             <h3>SR-15 LPR</h3>
-            <button onclick="location.href='file:///home/nick/Desktop/KACRedesign/products.html'" type="button"
-                class="CommercialProductButton">Find a Dealer</button>
+            <button onclick="location.href='products.html'" type="button" class="CommercialProductButton">Find a
+                Dealer</button>
         </div>
 
 
@@ -193,8 +194,8 @@
     <div id="lower">
         <img id="sr15lowerimg" src="KACASSETS/pictures/sr15lowerTransparent.png" alt="sr15lower">
         <h3>SR-15 Lower Reciever Assembly Kit</h3>
-        <button onclick="location.href='file:///home/nick/Desktop/KACRedesign/products.html'" type="button"
-            class="CommercialProductButton">Find a Dealer</button>
+        <button onclick="location.href='products.html'" type="button" class="CommercialProductButton">Find a
+            Dealer</button>
 
     </div>
 
