--- a/sr25.html
+++ b/sr25.html
@@ -6,19 +6,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap" rel="stylesheet">
+    <base href="/Nicks-KAC-redesign/">
 </head>
 
 <body id="otherpage" onload="document.body.style.opacity='1'">
     <header>
         <nav class="navbar">
-            <a href="file:///home/nick/Desktop/KACRedesign/index.html" class="logo">
+            <a href="index.html" class="logo">
                 <img src="KACASSETS/pictures/WebsiteLogo.png" alt="Website Logo">
             </a>
             <ul class="navbar-links">
-                <li class="nav-item"><a href="file:///home/nick/Desktop/KACRedesign/products.html">Products</a></li>
-                <li class="nav-item"><a href="file:///home/nick/Desktop/KACRedesign/ourmission.html">Our Mission</a>
+                <li class="nav-item"><a href="products.html">Products</a></li>
+                <li class="nav-item"><a href="ourmission.html">Our Mission</a>
                 </li>
-                <li class="nav-item"><a href="file:///home/nick/Desktop/KACRedesign/contact.html">Contact</a></li>
+                <li class="nav-item"><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -67,8 +68,8 @@
         </div>
         <div class="commercialitemsright">
             <h3>SR-25 CC</h3>
-            <button onclick="location.href='file:///home/nick/Desktop/KACRedesign/products.html'" type="button"
-                class="CommercialProductButton">Find a Dealer</button>
+            <button onclick="location.href='products.html'" type="button" class="CommercialProductButton">Find a
+                Dealer</button>
         </div>
     </div>
 
@@ -101,8 +102,8 @@
         </div>
         <div class="commercialitemsright">
             <h3>SR-25 PC</h3>
-            <button onclick="location.href='file:///home/nick/Desktop/KACRedesign/products.html'" type="button"
-                class="CommercialProductButton">Find a Dealer</button>
+            <button onclick="location.href='products.html'" type="button" class="CommercialProductButton">Find a
+                Dealer</button>
         </div>
     </div>
 
@@ -136,8 +137,8 @@
         </div>
         <div class="commercialitemsright">
             <h3>SR-25 PR</h3>
-            <button onclick="location.href='file:///home/nick/Desktop/KACRedesign/products.html'" type="button"
-                class="CommercialProductButton">Find a Dealer</button>
+            <button onclick="location.href='products.html'" type="button" class="CommercialProductButton">Find a
+                Dealer</button>
         </div>
     </div>
 
