set default zoom test

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap" rel="stylesheet">
   <base href="/Nicks-KAC-redesign/">
+  <meta name="viewport" content="width=device-width, initial-scale=0.67">
 </head>
 
 <body onload="document.body.style.opacity='1'">
@@ -25,8 +26,7 @@
   <img class="homepage-operator" src="KACASSETS/pictures/BG/FixedMaybeBGSoldier.png" alt="Operator">
   <div class="cta">
     <h1 id="HeroH1">When Only The <br /> Best Will <br />Do.</h1>
-    <button onclick="location.href='products.html'" type="button"
-      id="HeroButton">View Our Solutions</button>
+    <button onclick="location.href='products.html'" type="button" id="HeroButton">View Our Solutions</button>
   </div>
 </body>
 
